--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,15 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div id="chat-container">
   <div id="chat-window">
-    <div id="output"></div>
+    <div id="output">
+      <p *ngFor="let mensaje of mensajes">
+        {{mensaje}}
+      </p>
+    </div>
     <div id="actions"></div>
   </div>
   <input type="text" id="usuario" placeholder="Usuario">
   <input type="text" id="mensaje" placeholder="Mensaje">
-  <button id="enviar" onclick="makako()">Enviar</button>
+  <button id="enviar" (click)="makako()">Enviar</button>
 </div>
+`
