--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,17 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div id="chat-container">
   <div id="chat-window">
+    <div id="actions">
+      <p>{{escr}}</p>
+    </div>
     <div id="output">
       <p *ngFor="let mensaje of mensajes">
         {{mensaje}}
       </p>
     </div>
-    <div id="actions"></div>
   </div>
   <input type="text" id="usuario" placeholder="Usuario">
-  <input type="text" id="mensaje" placeholder="Mensaje">
-  <button id="enviar" (click)="makako()">Enviar</button>
+  <input type="text" id="mensaje" placeholder="Mensaje" (input)="notificarEscr()">
+  <button id="enviar" (click)="enviarMensaje()">Enviar</button>
 </div>
 `
