--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <div id="chat-container">
   <div id="chat-window">
     <div id="actions">
+      <p>{{cont}}</p>
       <p>{{escr}}</p>
     </div>
     <div id="output">
